--- a/demo_project/clunet_bootloader/Makefile
+++ b/demo_project/clunet_bootloader/Makefile
@@ -1,4 +1,4 @@
-# AVRDUDE config options for 'program' target
+# AVRDUDE's config options for 'program' target
 LFUSE              = E4
 HFUSE              = DA
 PROGRAMMER_MCU     = m8
